[tool.poetry]
name = "minutentag"
version = "0.1.0"
description = ""
authors = ["Alfonso <alfareiza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.126"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
